@@ -102,5 +102,4 @@ grubert@users.sourceforge.net
 .SH COPYRIGHT
 public domain
 .\" Generated by docutils manpage writer.
-.\" 
 .
