@@ -644,5 +644,4 @@ Die deutsche Übersetzung wurde von Anke Steuernagel
 .sp
 Für persönliche Würdigungen und Zusätze siehe Quelltexte.
 .\" Generated by docutils manpage writer.
-.\" 
 .
